--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </aside>                
     <main>
        <div class="row mar-lf" >
-           <div class="col-md-4 col-sm-12  ">
+           <div class="col-lg-4 col-md-6 col-sm-12  ">
              <table>
                <tr>
                  <td>
@@ -99,7 +99,7 @@
              </table>
                </div>
             
-           <div class="col-md-4 col-sm-12">
+           <div class="col-lg-4 col-md-6 col-sm-12">
             <table>
               <tr>
                 <td>
@@ -114,7 +114,7 @@
               </tr>
             </table>
        </div>
-       <div class="col-md-4 col-sm-12">
+       <div class=" col-lg-4 col-md-6 col-sm-12">
         <table>
           <tr>
             <td>
@@ -130,7 +130,7 @@
         </table>
 </div>
 <div class="row mar-lg" >
-  <div class="col-md-4 col-sm-12  ">
+  <div class="col-lg-4 col-md-6 col-sm-12  ">
     <table>
       <tr>
         <td>
@@ -146,7 +146,7 @@
     </table>
       </div>
   
-  <div class="col-md-4 col-sm-12">
+  <div class="col-lg-4 col-md-6 col-sm-12">
    <table>
      <tr>
        <td>
@@ -161,7 +161,7 @@
      </tr>
    </table>
 </div>
-<div class="col-md-4 col-sm-12">
+<div class="col-lg-4 col-md-6 col-sm-12">
 <table>
  <tr>
    <td>
